fix(style-variables): removed unprefixed spacing variables
removed unprefixed spacing variables

COMUI-1127

--- a/packages/genesys-spark-components/src/components/beta/gux-pagination-beta/gux-pagination-buttons-beta/gux-pagination-buttons-beta.less
+++ b/packages/genesys-spark-components/src/components/beta/gux-pagination-beta/gux-pagination-buttons-beta/gux-pagination-buttons-beta.less
@@ -68,7 +68,7 @@ gux-pagination-buttons-beta {
       .gux-pagination-buttons-list-target {
         min-width: 28px;
         min-height: 24px;
-        padding: @gux-spacing-3xs @spacing-2xs;
+        padding: @gux-spacing-3xs @gux-spacing-2xs;
         margin: 0;
         background: inherit;
         border: none;
