--- a/packages/genesys-spark-components/src/components/beta/gux-popover-beta/gux-popover-beta.less
+++ b/packages/genesys-spark-components/src/components/beta/gux-popover-beta/gux-popover-beta.less
@@ -15,7 +15,7 @@
   padding: @gux-spacing-medium;
   color: @gux-black-50;
   background-color: @gux-grey-100;
-  border-radius: @spacing-2xs;
+  border-radius: @gux-spacing-2xs;
   .gux-shadow-40();
 
   &.gux-hidden {
