--- a/packages/genesys-spark-components/src/components/stable/gux-popover/gux-popover.less
+++ b/packages/genesys-spark-components/src/components/stable/gux-popover/gux-popover.less
@@ -15,7 +15,7 @@
   display: inline-block;
   padding: @gux-spacing-medium;
   background-color: @gux-grey-100;
-  border-radius: @spacing-2xs;
+  border-radius: @gux-spacing-2xs;
   .gux-shadow-40();
 
   .gux-arrow,
