--- a/packages/genesys-spark-components/src/style/css-custom-properties.less
+++ b/packages/genesys-spark-components/src/style/css-custom-properties.less
@@ -110,20 +110,6 @@
   --gux-spacing-3xl: @gux-spacing-3xl;
   --gux-spacing-4xl: @gux-spacing-4xl;
 
-  // DEPRECATED unprefixed spacing variables will be removed in a future release
-  // https://inindca.atlassian.net/browse/COMUI-1127
-  --soft-grid-increment: @soft-grid-increment;
-  --spacing-3xs: @gux-spacing-3xs;
-  --spacing-2xs: @gux-spacing-2xs;
-  --spacing-xs: @gux-spacing-xs;
-  --spacing-small: @gux-spacing-small;
-  --spacing-medium: @gux-spacing-medium;
-  --spacing-large: @gux-spacing-large;
-  --spacing-xl: @gux-spacing-xl;
-  --spacing-2xl: @gux-spacing-2xl;
-  --spacing-3xl: @gux-spacing-3xl;
-  --spacing-4xl: @gux-spacing-4xl;
-
   // z-index
   --gux-zindex-modal: @gux-zindex-modal;
   --gux-zindex-popover: @gux-zindex-popover;
